Signed-off-by: Fabri <Fabri@PC-Fabri>

--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 
-<project name="Swing" default="jar" basedir=".">
+<project name="Swing console" default="jar" basedir=".">
 	<description>
   	Web Services build file
 	</description>
